Changing the title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Projeto test - Git and Github</title>
 </head>
 <body>
-  <h1>The New Project</h1>
+  <h1>The New Project, changing everything!!!</h1>
   
 </body>
 </html>
