Creating a Ipsum Paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>The New Project, changing everything!!!</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ab ex aut sint ullam, nemo molestiae! Quidem ut quia quaerat quis debitis reiciendis accusantium ipsum, consectetur expedita sunt error dolorum?</p>
   
 </body>
 </html>
