--- a/login.html
+++ b/login.html
@@ -1,3 +1,5 @@
 
 <h1>Hello mundo louco!!</h1>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda veritatis, fugit officiis mollitia voluptas eveniet! Quo minima recusandae optio obcaecati ad minus similique earum. Fugiat sint dolorem alias. Inventore, voluptas?</p>
+<img/>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, consequatur a porro accusantium optio illo perferendis enim nisi dolor corporis ducimus cupiditate ipsa reiciendis velit perspiciatis dolorem voluptates quis commodi!</p>
